[NOID] Cleans up resources after the tests (#3714)